tests/ui/macros/not-utf8.stderr
error: couldn't read $DIR/not-utf8.bin: stream did not contain valid UTF-8
  --> $DIR/not-utf8.rs:4:5
   |
LL |     include!("not-utf8.bin")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `include!`

error: aborting due to previous error

